--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-01 22:43+0300\n"
+"POT-Creation-Date: 2024-11-02 22:15+0300\n"
 "PO-Revision-Date: 2023-06-22 18:43+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -268,8 +268,8 @@ msgstr "Pozisyon başlığı boş olamaz"
 #: party/views/management/roles/set_role.py:66
 #: party/views/management/roles/set_role.py:74
 #: party/views/management/staff/leave_party.py:38
-#: party/views/management/staff/leave_party.py:210 player/player.py:395
-#: player/player.py:406 player/player.py:427 player/views/answer_captcha.py:35
+#: party/views/management/staff/leave_party.py:210 player/player.py:408
+#: player/player.py:419 player/player.py:440 player/views/answer_captcha.py:35
 #: player/views/answer_captcha.py:53
 #: player/views/bonus_code/activate_code.py:46
 #: player/views/bonus_code/activate_code.py:57
@@ -325,7 +325,7 @@ msgstr "Pozisyon başlığı boş olamaz"
 #: player/views/skills/up_skill.py:97 player/views/skills/up_skill.py:107
 #: player/views/skills/up_skill.py:115 player/views/skills/up_skill.py:123
 #: player/views/skills/up_skill.py:192 region/views/cancel_auto.py:34
-#: region/views/daily_status.py:95 region/views/do_mining.py:42
+#: region/views/daily_status.py:86 region/views/do_mining.py:42
 #: region/views/do_mining.py:55 region/views/do_mining.py:65
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
 #: region/views/do_mining.py:96 region/views/map/get_residency.py:32
@@ -545,6 +545,8 @@ msgid "Никнейм"
 msgstr "Kullanıcı adı"
 
 #: article/views/article_rated_list.py:71
+#: education/templates/education/edu_election.html:106
+#: education/templates/education/edu_election.html:298
 #: party/templates/party/redesign/primaries.html:242
 #: party/templatetags/redesign/tops/factory_top.py:77
 #: party/templatetags/redesign/tops/mining_top.py:78
@@ -567,6 +569,8 @@ msgstr "Arma"
 
 #: article/views/article_rated_list.py:76
 #: article/views/article_rated_list.py:77
+#: education/templates/education/edu_election.html:107
+#: education/templates/education/edu_election.html:299
 #: gov/templates/gov/redesign/elections.html:239
 #: party/templates/party/redesign/primaries.html:99
 #: party/templates/party/redesign/primaries.html:243
@@ -2833,6 +2837,55 @@ msgctxt "chat"
 msgid "Вы не состоите в этом чате"
 msgstr "Bir parti üyesi değilsin"
 
+#: education/templates/education/edu_election.html:37
+#: state/templates/state/redesign/elections.html:26
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы"
+msgctxt "set_mandate"
+msgid "Выборы"
+msgstr "Seçimler"
+
+#: education/templates/education/edu_election.html:37
+#: education/templates/education/edu_overview.html:153
+msgctxt "education"
+msgid "Объединённая Республика"
+msgstr ""
+
+#: education/templates/education/edu_election.html:108
+#: education/templates/education/edu_election.html:300
+#: gov/templates/gov/redesign/elections.html:240
+#: party/templates/party/redesign/primaries.html:244
+#: state/templates/state/redesign/elections.html:241
+#, fuzzy
+#| msgctxt "no_party"
+#| msgid "Действие"
+msgctxt "lists"
+msgid "Действие"
+msgstr "Aksiyon"
+
+#: education/templates/education/edu_election.html:119
+#: education/templates/education/edu_overview.html:472
+#: education/templates/education/edu_overview.html:515
+msgctxt "education"
+msgid "Партия Единства Республики"
+msgstr ""
+
+#: education/templates/education/edu_election.html:162
+#: education/templates/education/edu_overview.html:481
+#, fuzzy
+#| msgctxt "has_party"
+#| msgid "Некорректная партия игрока"
+msgctxt "education"
+msgid "Радикальная партия Республики"
+msgstr "Yanlış oyuncu partisi"
+
+#: education/templates/education/edu_election.html:184
+#: education/templates/education/edu_overview.html:490
+msgctxt "education"
+msgid "Зелёная Альтернатива Республики"
+msgstr ""
+
 #: education/templates/education/edu_lists/list_1.html:41
 #, python-format
 msgctxt "education"
@@ -2887,6 +2940,100 @@ msgid ""
 "отправиться на избирательный участок!"
 msgstr ""
 
+#: education/templates/education/edu_lists/list_2.html:72
+#, fuzzy
+#| msgctxt "w_trading_new"
+#| msgid "Цена товара должна быть положительным числом"
+msgctxt "education"
+msgid "Добро пожаловать на избирательный участок!"
+msgstr "Ürünlerin fiyatı pozitif bir sayı olmalıdır"
+
+#: education/templates/education/edu_lists/list_2.html:76
+msgctxt "education"
+msgid ""
+"Этот момент — не просто формальность, а важный шаг для любого политика. Ваш "
+"голос и ваша активность сейчас заложат основу для будущих побед."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:80
+msgctxt "education"
+msgid ""
+"Как только вы проголосуете, ваш голос пойдет в копилку нашей партии. Чем "
+"больше людей поддержат нас, тем больше у нас шансов получить места в "
+"парламенте."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:84
+msgctxt "education"
+msgid ""
+"Каждое кресло в парламенте открывает новые возможности для решения "
+"государственных вопросов: от налоговой реформы до влияния на внешнюю "
+"политику."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:88
+msgctxt "education"
+msgid ""
+"Помните, каждый голос важен! Чем выше результат партии на этих выборах, тем "
+"выше шанс, что вы займете место среди избранных, сможете продвигать законы, "
+"инициировать реформы и даже влиять на оборонную стратегию страны."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:92
+msgctxt "education"
+msgid "Выбор за вами, но от него зависит ваше будущее как политика."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:97
+msgctxt "education"
+msgid ""
+"Дело сделано! А теперь давайте вернёмся в офис партии. Там спокойнее и не "
+"слышно всех этих радикалов."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:101
+msgctxt "education"
+msgid "Хватит подкручивать результаты в свою пользу!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:105
+msgctxt "education"
+msgid "Нам нужны честные выборы, а не очередной фарс!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:109
+msgctxt "education"
+msgid "Они всё равно всё уже купили!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:113
+msgctxt "education"
+msgid "Не обращайте внимания, это всего лишь часть нашей работы."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:117
+msgctxt "education"
+msgid ""
+"На пути к вершинам всегда будет недовольные, но мы справимся. Главное — ваш "
+"выбор и ваша решимость."
+msgstr ""
+
+#: education/templates/education/edu_overview.html:65
+#: player/templates/player/redesign/overview.html:190
+#, fuzzy
+#| msgid "обзор"
+msgctxt "overview"
+msgid "обзор"
+msgstr "genel bakış"
+
+#: education/templates/education/edu_overview.html:86
+#: player/templates/player/redesign/overview.html:211
+#, fuzzy
+#| msgid "чат"
+msgctxt "overview"
+msgid "чат"
+msgstr "sohbet"
+
 #: education/templates/education/edu_overview.html:97
 #: player/templates/player/redesign/overview.html:222
 #, fuzzy
@@ -2894,11 +3041,6 @@ msgstr ""
 msgctxt "overview"
 msgid "мир"
 msgstr "dünya"
-
-#: education/templates/education/edu_overview.html:153
-msgctxt "education"
-msgid "Объединённая Республика"
-msgstr ""
 
 #: education/templates/education/edu_overview.html:190
 #, fuzzy
@@ -3008,25 +3150,6 @@ msgctxt "overview"
 msgid "государства"
 msgstr "devletin"
 
-#: education/templates/education/edu_overview.html:472
-#: education/templates/education/edu_overview.html:515
-msgctxt "education"
-msgid "Партия Единства Республики"
-msgstr ""
-
-#: education/templates/education/edu_overview.html:481
-#, fuzzy
-#| msgctxt "has_party"
-#| msgid "Некорректная партия игрока"
-msgctxt "education"
-msgid "Радикальная партия Республики"
-msgstr "Yanlış oyuncu partisi"
-
-#: education/templates/education/edu_overview.html:490
-msgctxt "education"
-msgid "Зелёная Альтернатива Республики"
-msgstr ""
-
 #: education/templates/education/edu_overview.html:502
 #: player/templates/player/redesign/overview.html:747
 msgctxt "overview"
@@ -3126,6 +3249,14 @@ msgctxt "education"
 msgid "протестующие"
 msgstr ""
 
+#: education/views/edu_election.py:55
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы"
+msgctxt "education"
+msgid "Выборы"
+msgstr "Seçimler"
+
 #: education/views/edu_overview.py:51 education/views/edu_overview.py:54
 #: player/views/overview.py:372 player/views/overview.py:375
 msgctxt "education"
@@ -3159,6 +3290,9 @@ msgid "Ольга"
 msgstr ""
 
 #: education/views/edu_overview.py:61 player/views/overview.py:381
+#, fuzzy
+#| msgid "Обзор"
+msgctxt "overview"
 msgid "Обзор"
 msgstr "Genel bakış"
 
@@ -3948,7 +4082,7 @@ msgctxt "factory"
 msgid ". В наличии "
 msgstr ". Stokta var "
 
-#: factory/views/start_auto.py:31 player/player.py:393
+#: factory/views/start_auto.py:31 player/player.py:406
 #: region/views/do_mining.py:40 region/views/start_auto.py:26
 msgctxt "mining"
 msgid "Дождитесь конца полёта"
@@ -4032,16 +4166,6 @@ msgstr "Başkanlık seçimleri"
 msgctxt "pres_elections"
 msgid "Кандидат"
 msgstr ""
-
-#: gov/templates/gov/redesign/elections.html:240
-#: party/templates/party/redesign/primaries.html:244
-#: state/templates/state/redesign/elections.html:241
-#, fuzzy
-#| msgctxt "no_party"
-#| msgid "Действие"
-msgctxt "lists"
-msgid "Действие"
-msgstr "Aksiyon"
 
 #: gov/templates/state/redesign/forms/foreign_right.html:13
 #, fuzzy
@@ -5164,13 +5288,13 @@ msgctxt "cash_log"
 msgid "Навыки"
 msgstr "Yetenekler"
 
-#: player/player.py:394 player/player.py:405 player/player.py:426
+#: player/player.py:407 player/player.py:418 player/player.py:439
 #: region/views/retrieve_cash.py:40
 msgctxt "mining"
 msgid "Ошибка получения финансирования"
 msgstr "Finansman Hatası"
 
-#: player/player.py:404 player/player.py:425
+#: player/player.py:417 player/player.py:438
 msgctxt "mining"
 msgid "Нечего забирать"
 msgstr "Alınacak hiçbir şey yok"
@@ -6023,20 +6147,6 @@ msgid ""
 "много денег!"
 msgstr ""
 
-#: player/templates/player/redesign/overview.html:190
-#, fuzzy
-#| msgid "обзор"
-msgctxt "overview"
-msgid "обзор"
-msgstr "genel bakış"
-
-#: player/templates/player/redesign/overview.html:211
-#, fuzzy
-#| msgid "чат"
-msgctxt "overview"
-msgid "чат"
-msgstr "sohbet"
-
 #: player/templates/player/redesign/overview.html:278
 #, fuzzy
 #| msgid "независимый регион"
@@ -6735,7 +6845,7 @@ msgstr "Belirtilen Depo zaten geçerli bölgede"
 #: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
 #: player/views/open_lootboxes.py:132 player/views/set_language.py:54
 #: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
-#: region/views/daily_status.py:94 region/views/daily_status.py:96
+#: region/views/daily_status.py:85 region/views/daily_status.py:87
 #: region/views/map/save_links.py:62 region/views/retrieve_cash.py:42
 #: region/views/start_auto.py:82
 #: storage/views/vault/avia_box/loot_aviaboxes.py:54
@@ -7447,7 +7557,7 @@ msgid ""
 "союзники. Позвольте помочь выбрать Вам партию, хотя бы на первое время."
 msgstr ""
 
-#: region/templates/region/redesign/mining.html:12 region/views/mining.py:186
+#: region/templates/region/redesign/mining.html:12 region/views/mining.py:171
 msgctxt "mining"
 msgid "Добыча"
 msgstr "Üretme"
@@ -8221,14 +8331,6 @@ msgstr "Ücretsiz"
 msgctxt "state_view"
 msgid "Выдаётся министром"
 msgstr "Bakan tarafından verilir"
-
-#: state/templates/state/redesign/elections.html:26
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "Выборы"
-msgctxt "set_mandate"
-msgid "Выборы"
-msgstr "Seçimler"
 
 #: state/templates/state/redesign/gov/executives.html:26
 #: state/templates/state/redesign/gov/executives.html:39
