--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-01 22:43+0300\n"
+"POT-Creation-Date: 2024-11-02 22:15+0300\n"
 "PO-Revision-Date: 2024-11-01 22:45+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -242,8 +242,8 @@ msgstr "Article cannot be empty"
 #: party/views/management/roles/set_role.py:66
 #: party/views/management/roles/set_role.py:74
 #: party/views/management/staff/leave_party.py:38
-#: party/views/management/staff/leave_party.py:210 player/player.py:395
-#: player/player.py:406 player/player.py:427 player/views/answer_captcha.py:35
+#: party/views/management/staff/leave_party.py:210 player/player.py:408
+#: player/player.py:419 player/player.py:440 player/views/answer_captcha.py:35
 #: player/views/answer_captcha.py:53
 #: player/views/bonus_code/activate_code.py:46
 #: player/views/bonus_code/activate_code.py:57
@@ -299,7 +299,7 @@ msgstr "Article cannot be empty"
 #: player/views/skills/up_skill.py:97 player/views/skills/up_skill.py:107
 #: player/views/skills/up_skill.py:115 player/views/skills/up_skill.py:123
 #: player/views/skills/up_skill.py:192 region/views/cancel_auto.py:34
-#: region/views/daily_status.py:95 region/views/do_mining.py:42
+#: region/views/daily_status.py:86 region/views/do_mining.py:42
 #: region/views/do_mining.py:55 region/views/do_mining.py:65
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
 #: region/views/do_mining.py:96 region/views/map/get_residency.py:32
@@ -504,6 +504,8 @@ msgid "Никнейм"
 msgstr "Nickname"
 
 #: article/views/article_rated_list.py:71
+#: education/templates/education/edu_election.html:106
+#: education/templates/education/edu_election.html:298
 #: party/templates/party/redesign/primaries.html:242
 #: party/templatetags/redesign/tops/factory_top.py:77
 #: party/templatetags/redesign/tops/mining_top.py:78
@@ -524,6 +526,8 @@ msgstr "Coat"
 
 #: article/views/article_rated_list.py:76
 #: article/views/article_rated_list.py:77
+#: education/templates/education/edu_election.html:107
+#: education/templates/education/edu_election.html:299
 #: gov/templates/gov/redesign/elections.html:239
 #: party/templates/party/redesign/primaries.html:99
 #: party/templates/party/redesign/primaries.html:243
@@ -2152,6 +2156,58 @@ msgctxt "chat"
 msgid "Вы не состоите в этом чате"
 msgstr "You are not a member of this chat"
 
+#: education/templates/education/edu_election.html:37
+#: state/templates/state/redesign/elections.html:26
+msgctxt "set_mandate"
+msgid "Выборы"
+msgstr "Elections"
+
+#: education/templates/education/edu_election.html:37
+#: education/templates/education/edu_overview.html:153
+#, fuzzy
+#| msgctxt "new_bill"
+#| msgid "Президентская республика"
+msgctxt "education"
+msgid "Объединённая Республика"
+msgstr "Presidential Republic"
+
+#: education/templates/education/edu_election.html:108
+#: education/templates/education/edu_election.html:300
+#: gov/templates/gov/redesign/elections.html:240
+#: party/templates/party/redesign/primaries.html:244
+#: state/templates/state/redesign/elections.html:241
+msgctxt "lists"
+msgid "Действие"
+msgstr "Action"
+
+#: education/templates/education/edu_election.html:119
+#: education/templates/education/edu_overview.html:472
+#: education/templates/education/edu_overview.html:515
+#, fuzzy
+#| msgctxt "new_bill"
+#| msgid "Президентская республика"
+msgctxt "education"
+msgid "Партия Единства Республики"
+msgstr "Presidential Republic"
+
+#: education/templates/education/edu_election.html:162
+#: education/templates/education/edu_overview.html:481
+#, fuzzy
+#| msgctxt "new_bill"
+#| msgid "Президентская республика"
+msgctxt "education"
+msgid "Радикальная партия Республики"
+msgstr "Presidential Republic"
+
+#: education/templates/education/edu_election.html:184
+#: education/templates/education/edu_overview.html:490
+#, fuzzy
+#| msgctxt "new_bill"
+#| msgid "Президентская республика"
+msgctxt "education"
+msgid "Зелёная Альтернатива Республики"
+msgstr "Presidential Republic"
+
 #: education/templates/education/edu_lists/list_1.html:41
 #, python-format
 msgctxt "education"
@@ -2206,19 +2262,101 @@ msgid ""
 "отправиться на избирательный участок!"
 msgstr ""
 
+#: education/templates/education/edu_lists/list_2.html:72
+#, fuzzy
+#| msgctxt "w_trading_new"
+#| msgid "Цена товара должна быть положительным числом"
+msgctxt "education"
+msgid "Добро пожаловать на избирательный участок!"
+msgstr "Product price must be a positive number"
+
+#: education/templates/education/edu_lists/list_2.html:76
+msgctxt "education"
+msgid ""
+"Этот момент — не просто формальность, а важный шаг для любого политика. Ваш "
+"голос и ваша активность сейчас заложат основу для будущих побед."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:80
+msgctxt "education"
+msgid ""
+"Как только вы проголосуете, ваш голос пойдет в копилку нашей партии. Чем "
+"больше людей поддержат нас, тем больше у нас шансов получить места в "
+"парламенте."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:84
+msgctxt "education"
+msgid ""
+"Каждое кресло в парламенте открывает новые возможности для решения "
+"государственных вопросов: от налоговой реформы до влияния на внешнюю "
+"политику."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:88
+msgctxt "education"
+msgid ""
+"Помните, каждый голос важен! Чем выше результат партии на этих выборах, тем "
+"выше шанс, что вы займете место среди избранных, сможете продвигать законы, "
+"инициировать реформы и даже влиять на оборонную стратегию страны."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:92
+msgctxt "education"
+msgid "Выбор за вами, но от него зависит ваше будущее как политика."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:97
+msgctxt "education"
+msgid ""
+"Дело сделано! А теперь давайте вернёмся в офис партии. Там спокойнее и не "
+"слышно всех этих радикалов."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:101
+msgctxt "education"
+msgid "Хватит подкручивать результаты в свою пользу!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:105
+msgctxt "education"
+msgid "Нам нужны честные выборы, а не очередной фарс!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:109
+msgctxt "education"
+msgid "Они всё равно всё уже купили!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:113
+msgctxt "education"
+msgid "Не обращайте внимания, это всего лишь часть нашей работы."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:117
+msgctxt "education"
+msgid ""
+"На пути к вершинам всегда будет недовольные, но мы справимся. Главное — ваш "
+"выбор и ваша решимость."
+msgstr ""
+
+#: education/templates/education/edu_overview.html:65
+#: player/templates/player/redesign/overview.html:190
+msgctxt "overview"
+msgid "обзор"
+msgstr "overview"
+
+#: education/templates/education/edu_overview.html:86
+#: player/templates/player/redesign/overview.html:211
+msgctxt "overview"
+msgid "чат"
+msgstr "chat"
+
 #: education/templates/education/edu_overview.html:97
 #: player/templates/player/redesign/overview.html:222
 msgctxt "overview"
 msgid "мир"
 msgstr "world"
-
-#: education/templates/education/edu_overview.html:153
-#, fuzzy
-#| msgctxt "new_bill"
-#| msgid "Президентская республика"
-msgctxt "education"
-msgid "Объединённая Республика"
-msgstr "Presidential Republic"
 
 #: education/templates/education/edu_overview.html:190
 #, fuzzy
@@ -2318,31 +2456,6 @@ msgstr "parties"
 msgctxt "overview"
 msgid "государства"
 msgstr "of state"
-
-#: education/templates/education/edu_overview.html:472
-#: education/templates/education/edu_overview.html:515
-#, fuzzy
-#| msgctxt "new_bill"
-#| msgid "Президентская республика"
-msgctxt "education"
-msgid "Партия Единства Республики"
-msgstr "Presidential Republic"
-
-#: education/templates/education/edu_overview.html:481
-#, fuzzy
-#| msgctxt "new_bill"
-#| msgid "Президентская республика"
-msgctxt "education"
-msgid "Радикальная партия Республики"
-msgstr "Presidential Republic"
-
-#: education/templates/education/edu_overview.html:490
-#, fuzzy
-#| msgctxt "new_bill"
-#| msgid "Президентская республика"
-msgctxt "education"
-msgid "Зелёная Альтернатива Республики"
-msgstr "Presidential Republic"
 
 #: education/templates/education/edu_overview.html:502
 #: player/templates/player/redesign/overview.html:747
@@ -2444,6 +2557,14 @@ msgctxt "education"
 msgid "протестующие"
 msgstr ""
 
+#: education/views/edu_election.py:55
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы"
+msgctxt "education"
+msgid "Выборы"
+msgstr "Elections"
+
 #: education/views/edu_overview.py:51 education/views/edu_overview.py:54
 #: player/views/overview.py:372 player/views/overview.py:375
 msgctxt "education"
@@ -2471,6 +2592,9 @@ msgid "Ольга"
 msgstr "Olga"
 
 #: education/views/edu_overview.py:61 player/views/overview.py:381
+#, fuzzy
+#| msgid "Обзор"
+msgctxt "overview"
 msgid "Обзор"
 msgstr "Overview"
 
@@ -3212,7 +3336,7 @@ msgctxt "factory"
 msgid ". В наличии "
 msgstr ". In stock "
 
-#: factory/views/start_auto.py:31 player/player.py:393
+#: factory/views/start_auto.py:31 player/player.py:406
 #: region/views/do_mining.py:40 region/views/start_auto.py:26
 msgctxt "mining"
 msgid "Дождитесь конца полёта"
@@ -3284,13 +3408,6 @@ msgstr "Presidential elections"
 msgctxt "pres_elections"
 msgid "Кандидат"
 msgstr "Candidate"
-
-#: gov/templates/gov/redesign/elections.html:240
-#: party/templates/party/redesign/primaries.html:244
-#: state/templates/state/redesign/elections.html:241
-msgctxt "lists"
-msgid "Действие"
-msgstr "Action"
 
 #: gov/templates/state/redesign/forms/foreign_right.html:13
 msgctxt "foreign_right"
@@ -4267,13 +4384,13 @@ msgctxt "cash_log"
 msgid "Навыки"
 msgstr "Skills"
 
-#: player/player.py:394 player/player.py:405 player/player.py:426
+#: player/player.py:407 player/player.py:418 player/player.py:439
 #: region/views/retrieve_cash.py:40
 msgctxt "mining"
 msgid "Ошибка получения финансирования"
 msgstr "Daily Funding Error"
 
-#: player/player.py:404 player/player.py:425
+#: player/player.py:417 player/player.py:438
 msgctxt "mining"
 msgid "Нечего забирать"
 msgstr "Nothing to get"
@@ -5129,16 +5246,6 @@ msgstr ""
 "I just received a call from your investors. They expect concrete actions "
 "from you and are ready to pay for them. Let’s make a lot of money today!"
 
-#: player/templates/player/redesign/overview.html:190
-msgctxt "overview"
-msgid "обзор"
-msgstr "overview"
-
-#: player/templates/player/redesign/overview.html:211
-msgctxt "overview"
-msgid "чат"
-msgstr "chat"
-
 #: player/templates/player/redesign/overview.html:278
 msgctxt "overview"
 msgid "независимый регион"
@@ -5781,7 +5888,7 @@ msgstr "This code has already been activated"
 #: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
 #: player/views/open_lootboxes.py:132 player/views/set_language.py:54
 #: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
-#: region/views/daily_status.py:94 region/views/daily_status.py:96
+#: region/views/daily_status.py:85 region/views/daily_status.py:87
 #: region/views/map/save_links.py:62 region/views/retrieve_cash.py:42
 #: region/views/start_auto.py:82
 #: storage/views/vault/avia_box/loot_aviaboxes.py:54
@@ -6369,7 +6476,7 @@ msgstr ""
 "To start the journey of conquering all these territories, we’ll need allies. "
 "Let me help you choose a party, at least for the time being."
 
-#: region/templates/region/redesign/mining.html:12 region/views/mining.py:186
+#: region/templates/region/redesign/mining.html:12 region/views/mining.py:171
 msgctxt "mining"
 msgid "Добыча"
 msgstr "Work"
@@ -7025,11 +7132,6 @@ msgstr "Free"
 msgctxt "state_view"
 msgid "Выдаётся министром"
 msgstr "Issued by minister"
-
-#: state/templates/state/redesign/elections.html:26
-msgctxt "set_mandate"
-msgid "Выборы"
-msgstr "Elections"
 
 #: state/templates/state/redesign/gov/executives.html:26
 #: state/templates/state/redesign/gov/executives.html:39
