--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-01 22:43+0300\n"
+"POT-Creation-Date: 2024-11-02 22:15+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -264,8 +264,8 @@ msgstr "Kemampuan ID harus berbentuk angka"
 #: party/views/management/roles/set_role.py:66
 #: party/views/management/roles/set_role.py:74
 #: party/views/management/staff/leave_party.py:38
-#: party/views/management/staff/leave_party.py:210 player/player.py:395
-#: player/player.py:406 player/player.py:427 player/views/answer_captcha.py:35
+#: party/views/management/staff/leave_party.py:210 player/player.py:408
+#: player/player.py:419 player/player.py:440 player/views/answer_captcha.py:35
 #: player/views/answer_captcha.py:53
 #: player/views/bonus_code/activate_code.py:46
 #: player/views/bonus_code/activate_code.py:57
@@ -321,7 +321,7 @@ msgstr "Kemampuan ID harus berbentuk angka"
 #: player/views/skills/up_skill.py:97 player/views/skills/up_skill.py:107
 #: player/views/skills/up_skill.py:115 player/views/skills/up_skill.py:123
 #: player/views/skills/up_skill.py:192 region/views/cancel_auto.py:34
-#: region/views/daily_status.py:95 region/views/do_mining.py:42
+#: region/views/daily_status.py:86 region/views/do_mining.py:42
 #: region/views/do_mining.py:55 region/views/do_mining.py:65
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
 #: region/views/do_mining.py:96 region/views/map/get_residency.py:32
@@ -541,6 +541,8 @@ msgid "Никнейм"
 msgstr "Nama"
 
 #: article/views/article_rated_list.py:71
+#: education/templates/education/edu_election.html:106
+#: education/templates/education/edu_election.html:298
 #: party/templates/party/redesign/primaries.html:242
 #: party/templatetags/redesign/tops/factory_top.py:77
 #: party/templatetags/redesign/tops/mining_top.py:78
@@ -561,6 +563,8 @@ msgstr ""
 
 #: article/views/article_rated_list.py:76
 #: article/views/article_rated_list.py:77
+#: education/templates/education/edu_election.html:107
+#: education/templates/education/edu_election.html:299
 #: gov/templates/gov/redesign/elections.html:239
 #: party/templates/party/redesign/primaries.html:99
 #: party/templates/party/redesign/primaries.html:243
@@ -2735,6 +2739,55 @@ msgctxt "chat"
 msgid "Вы не состоите в этом чате"
 msgstr "Keluar"
 
+#: education/templates/education/edu_election.html:37
+#: state/templates/state/redesign/elections.html:26
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы"
+msgctxt "set_mandate"
+msgid "Выборы"
+msgstr "Pemilihan"
+
+#: education/templates/education/edu_election.html:37
+#: education/templates/education/edu_overview.html:153
+msgctxt "education"
+msgid "Объединённая Республика"
+msgstr ""
+
+#: education/templates/education/edu_election.html:108
+#: education/templates/education/edu_election.html:300
+#: gov/templates/gov/redesign/elections.html:240
+#: party/templates/party/redesign/primaries.html:244
+#: state/templates/state/redesign/elections.html:241
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выбор действия"
+msgctxt "lists"
+msgid "Действие"
+msgstr "tindakan"
+
+#: education/templates/education/edu_election.html:119
+#: education/templates/education/edu_overview.html:472
+#: education/templates/education/edu_overview.html:515
+msgctxt "education"
+msgid "Партия Единства Республики"
+msgstr ""
+
+#: education/templates/education/edu_election.html:162
+#: education/templates/education/edu_overview.html:481
+#, fuzzy
+#| msgctxt "storage"
+#| msgid "Некорректное число денег игрока"
+msgctxt "education"
+msgid "Радикальная партия Республики"
+msgstr "Jumlah uang salah"
+
+#: education/templates/education/edu_election.html:184
+#: education/templates/education/edu_overview.html:490
+msgctxt "education"
+msgid "Зелёная Альтернатива Республики"
+msgstr ""
+
 #: education/templates/education/edu_lists/list_1.html:41
 #, python-format
 msgctxt "education"
@@ -2789,6 +2842,100 @@ msgid ""
 "отправиться на избирательный участок!"
 msgstr ""
 
+#: education/templates/education/edu_lists/list_2.html:72
+#, fuzzy
+#| msgctxt "mining"
+#| msgid "Количество Энергии должно быть положительным"
+msgctxt "education"
+msgid "Добро пожаловать на избирательный участок!"
+msgstr "Jumlah energi tidak boleh minus"
+
+#: education/templates/education/edu_lists/list_2.html:76
+msgctxt "education"
+msgid ""
+"Этот момент — не просто формальность, а важный шаг для любого политика. Ваш "
+"голос и ваша активность сейчас заложат основу для будущих побед."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:80
+msgctxt "education"
+msgid ""
+"Как только вы проголосуете, ваш голос пойдет в копилку нашей партии. Чем "
+"больше людей поддержат нас, тем больше у нас шансов получить места в "
+"парламенте."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:84
+msgctxt "education"
+msgid ""
+"Каждое кресло в парламенте открывает новые возможности для решения "
+"государственных вопросов: от налоговой реформы до влияния на внешнюю "
+"политику."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:88
+msgctxt "education"
+msgid ""
+"Помните, каждый голос важен! Чем выше результат партии на этих выборах, тем "
+"выше шанс, что вы займете место среди избранных, сможете продвигать законы, "
+"инициировать реформы и даже влиять на оборонную стратегию страны."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:92
+msgctxt "education"
+msgid "Выбор за вами, но от него зависит ваше будущее как политика."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:97
+msgctxt "education"
+msgid ""
+"Дело сделано! А теперь давайте вернёмся в офис партии. Там спокойнее и не "
+"слышно всех этих радикалов."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:101
+msgctxt "education"
+msgid "Хватит подкручивать результаты в свою пользу!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:105
+msgctxt "education"
+msgid "Нам нужны честные выборы, а не очередной фарс!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:109
+msgctxt "education"
+msgid "Они всё равно всё уже купили!"
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:113
+msgctxt "education"
+msgid "Не обращайте внимания, это всего лишь часть нашей работы."
+msgstr ""
+
+#: education/templates/education/edu_lists/list_2.html:117
+msgctxt "education"
+msgid ""
+"На пути к вершинам всегда будет недовольные, но мы справимся. Главное — ваш "
+"выбор и ваша решимость."
+msgstr ""
+
+#: education/templates/education/edu_overview.html:65
+#: player/templates/player/redesign/overview.html:190
+#, fuzzy
+#| msgid "обзор"
+msgctxt "overview"
+msgid "обзор"
+msgstr "beranda"
+
+#: education/templates/education/edu_overview.html:86
+#: player/templates/player/redesign/overview.html:211
+#, fuzzy
+#| msgid "чат"
+msgctxt "overview"
+msgid "чат"
+msgstr "obrolan"
+
 #: education/templates/education/edu_overview.html:97
 #: player/templates/player/redesign/overview.html:222
 #, fuzzy
@@ -2796,11 +2943,6 @@ msgstr ""
 msgctxt "overview"
 msgid "мир"
 msgstr "dunia"
-
-#: education/templates/education/edu_overview.html:153
-msgctxt "education"
-msgid "Объединённая Республика"
-msgstr ""
 
 #: education/templates/education/edu_overview.html:190
 #, fuzzy
@@ -2910,25 +3052,6 @@ msgctxt "overview"
 msgid "государства"
 msgstr "negara bagian"
 
-#: education/templates/education/edu_overview.html:472
-#: education/templates/education/edu_overview.html:515
-msgctxt "education"
-msgid "Партия Единства Республики"
-msgstr ""
-
-#: education/templates/education/edu_overview.html:481
-#, fuzzy
-#| msgctxt "storage"
-#| msgid "Некорректное число денег игрока"
-msgctxt "education"
-msgid "Радикальная партия Республики"
-msgstr "Jumlah uang salah"
-
-#: education/templates/education/edu_overview.html:490
-msgctxt "education"
-msgid "Зелёная Альтернатива Республики"
-msgstr ""
-
 #: education/templates/education/edu_overview.html:502
 #: player/templates/player/redesign/overview.html:747
 msgctxt "overview"
@@ -3031,6 +3154,14 @@ msgctxt "education"
 msgid "протестующие"
 msgstr ""
 
+#: education/views/edu_election.py:55
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы"
+msgctxt "education"
+msgid "Выборы"
+msgstr "Pemilihan"
+
 #: education/views/edu_overview.py:51 education/views/edu_overview.py:54
 #: player/views/overview.py:372 player/views/overview.py:375
 msgctxt "education"
@@ -3061,6 +3192,9 @@ msgid "Ольга"
 msgstr ""
 
 #: education/views/edu_overview.py:61 player/views/overview.py:381
+#, fuzzy
+#| msgid "Обзор"
+msgctxt "overview"
 msgid "Обзор"
 msgstr "Beranda"
 
@@ -3907,7 +4041,7 @@ msgctxt "factory"
 msgid ". В наличии "
 msgstr ", persediaan : "
 
-#: factory/views/start_auto.py:31 player/player.py:393
+#: factory/views/start_auto.py:31 player/player.py:406
 #: region/views/do_mining.py:40 region/views/start_auto.py:26
 msgctxt "mining"
 msgid "Дождитесь конца полёта"
@@ -4003,16 +4137,6 @@ msgstr "Pemilihan presiden"
 msgctxt "pres_elections"
 msgid "Кандидат"
 msgstr ""
-
-#: gov/templates/gov/redesign/elections.html:240
-#: party/templates/party/redesign/primaries.html:244
-#: state/templates/state/redesign/elections.html:241
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "выбор действия"
-msgctxt "lists"
-msgid "Действие"
-msgstr "tindakan"
 
 #: gov/templates/state/redesign/forms/foreign_right.html:13
 #, fuzzy
@@ -5318,13 +5442,13 @@ msgctxt "cash_log"
 msgid "Навыки"
 msgstr "Kemampuan"
 
-#: player/player.py:394 player/player.py:405 player/player.py:426
+#: player/player.py:407 player/player.py:418 player/player.py:439
 #: region/views/retrieve_cash.py:40
 msgctxt "mining"
 msgid "Ошибка получения финансирования"
 msgstr "Pendanaan Harian Gagal"
 
-#: player/player.py:404 player/player.py:425
+#: player/player.py:417 player/player.py:438
 msgctxt "mining"
 msgid "Нечего забирать"
 msgstr "Tidak mendapatkan apapun"
@@ -6167,20 +6291,6 @@ msgid ""
 "много денег!"
 msgstr ""
 
-#: player/templates/player/redesign/overview.html:190
-#, fuzzy
-#| msgid "обзор"
-msgctxt "overview"
-msgid "обзор"
-msgstr "beranda"
-
-#: player/templates/player/redesign/overview.html:211
-#, fuzzy
-#| msgid "чат"
-msgctxt "overview"
-msgid "чат"
-msgstr "obrolan"
-
 #: player/templates/player/redesign/overview.html:278
 #, fuzzy
 #| msgid "независимый регион"
@@ -6892,7 +7002,7 @@ msgstr "Penyimpanan telah berada di wilayah saat ini"
 #: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
 #: player/views/open_lootboxes.py:132 player/views/set_language.py:54
 #: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
-#: region/views/daily_status.py:94 region/views/daily_status.py:96
+#: region/views/daily_status.py:85 region/views/daily_status.py:87
 #: region/views/map/save_links.py:62 region/views/retrieve_cash.py:42
 #: region/views/start_auto.py:82
 #: storage/views/vault/avia_box/loot_aviaboxes.py:54
@@ -7615,7 +7725,7 @@ msgid ""
 "союзники. Позвольте помочь выбрать Вам партию, хотя бы на первое время."
 msgstr ""
 
-#: region/templates/region/redesign/mining.html:12 region/views/mining.py:186
+#: region/templates/region/redesign/mining.html:12 region/views/mining.py:171
 msgctxt "mining"
 msgid "Добыча"
 msgstr "Kerja"
@@ -8394,14 +8504,6 @@ msgstr ""
 msgctxt "state_view"
 msgid "Выдаётся министром"
 msgstr ""
-
-#: state/templates/state/redesign/elections.html:26
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "Выборы"
-msgctxt "set_mandate"
-msgid "Выборы"
-msgstr "Pemilihan"
 
 #: state/templates/state/redesign/gov/executives.html:26
 #: state/templates/state/redesign/gov/executives.html:39
