--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-02 22:15+0300\n"
-"PO-Revision-Date: 2024-11-01 22:24+0300\n"
+"POT-Creation-Date: 2024-11-02 22:25+0300\n"
+"PO-Revision-Date: 2024-11-02 22:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: az\n"
@@ -2698,7 +2698,7 @@ msgstr "Serverin ildönümü!"
 #: player/templates/player/redesign/game_event/newyear.html:221
 msgctxt "game_event"
 msgid "общий"
-msgstr ""
+msgstr "Ümumi"
 
 #: event/templates/event/anniversary.html:222
 #: event/templates/event/festival.html:222
@@ -2707,19 +2707,17 @@ msgstr ""
 #: player/templates/player/redesign/game_event/newyear.html:222
 msgctxt "game_event"
 msgid "личный"
-msgstr ""
+msgstr "Şəxsi"
 
 #: event/templates/event/anniversary.html:393
 msgctxt "game_event"
 msgid "Годовщина сервера WP:"
-msgstr ""
+msgstr "WP-nin ildönümü"
 
 #: event/templates/event/anniversary.html:394
-#, fuzzy
-#| msgid "У вас пока еще нет стикеров"
 msgctxt "game_event"
 msgid "заработайте премиум и золото!"
-msgstr "Hələ stikerləriniz yoxdur"
+msgstr "Premium və qızıl qazanın!"
 
 #: event/templates/event/anniversary.html:395
 msgctxt "game_event"
@@ -2761,12 +2759,12 @@ msgstr ""
 #: event/templates/event/festival.html:218
 msgctxt "game_event"
 msgid "Зимний фестиваль"
-msgstr ""
+msgstr "Qış festivalı"
 
 #: event/templates/event/festival.html:393
 msgctxt "game_event"
 msgid "Зимний феститваль в WP:"
-msgstr ""
+msgstr "WP-də qış festivalı:"
 
 #: event/templates/event/festival.html:394
 msgctxt "game_event"
@@ -2804,44 +2802,38 @@ msgstr "Ad"
 #: event/templates/event/inviting.html:166
 msgctxt "game_event"
 msgid "Бонус"
-msgstr ""
+msgstr "Bonus"
 
 #: event/templates/event/inviting.html:43
 msgctxt "game_event"
 msgid "Пригласи друзей"
-msgstr ""
+msgstr "Dəvət et"
 
 #: event/templates/event/inviting.html:43
 msgctxt "game_event"
 msgid "и получай награды!"
-msgstr ""
+msgstr "və qazan!"
 
 #: event/templates/event/inviting.html:46
-#, fuzzy
-#| msgctxt "goods"
-#| msgid "Медикаменты"
 msgctxt "game_event"
 msgid "Регламент"
-msgstr "Tibbi ləvazimatlar "
+msgstr ""
 
 #: event/templates/event/inviting.html:48
 msgctxt "game_event"
 msgid "Активировать"
-msgstr ""
+msgstr "Aktiv et"
 
 #: event/templates/event/inviting.html:50
 #: event/templates/event/inviting.html:142
 msgctxt "game_event"
 msgid "Приглашённые"
-msgstr ""
+msgstr "Dəvət olunanlar"
 
 #: event/templates/event/inviting.html:57
-#, fuzzy
-#| msgctxt "goods"
-#| msgid "Медикаменты"
 msgctxt "game_event"
 msgid "Регламент события"
-msgstr "Tibbi ləvazimatlar "
+msgstr ""
 
 #: event/templates/event/inviting.html:60
 msgctxt "game_event"
@@ -2918,17 +2910,17 @@ msgstr ""
 #: event/templates/event/inviting.html:99
 msgctxt "game_event"
 msgid "Укажите ID пользователя, пригласившего вас в игру."
-msgstr ""
+msgstr "Sizi dəvət edən hesabın ID-ni qeyd edin."
 
 #: event/templates/event/inviting.html:103
 msgctxt "game_event"
 msgid "Вы получите"
-msgstr ""
+msgstr "Siz qazanazsız"
 
 #: event/templates/event/inviting.html:104
 msgctxt "game_event"
 msgid "7 дней премиум-аккаунта"
-msgstr ""
+msgstr "7 günlük premium-hesab"
 
 #: event/templates/event/inviting.html:105
 msgctxt "game_event"
@@ -2945,24 +2937,22 @@ msgstr ""
 #: event/templates/event/inviting.html:116
 msgctxt "game_event"
 msgid "Введите ID пригласившего"
-msgstr ""
+msgstr "Dəvət edənin ID-ni qeyd edin"
 
 #: event/templates/event/inviting.html:132
 msgctxt "game_event"
 msgid "активировать"
-msgstr ""
+msgstr "Aktiv et"
 
 #: event/templates/event/inviting.html:143
 msgctxt "game_event"
 msgid "Рейтинг"
-msgstr ""
+msgstr "Sıralama"
 
 #: event/templates/event/inviting.html:150
-#, fuzzy
-#| msgid "Финансирование"
 msgctxt "game_event"
 msgid "Бонус к Финансированию"
-msgstr "Maliyyələşdirmə"
+msgstr "Maliyyələşmə bonusu"
 
 #: event/templates/event/inviting.html:155
 msgctxt "game_event"
@@ -2978,7 +2968,7 @@ msgstr ""
 #: player/views/game_event/summer.py:44
 msgctxt "game_event"
 msgid "Летний фестиваль"
-msgstr ""
+msgstr "Yay festivalı"
 
 #: event/templates/event/summer_festival.html:393
 msgctxt "game_event"
@@ -3031,7 +3021,7 @@ msgstr ""
 #: event/views/winter_festival.py:45
 msgctxt "game_event_ny"
 msgid "Зимний фестиваль"
-msgstr ""
+msgstr "Qış festivalı"
 
 #: factory/migrations/0023_auto_20230911_0014.py:18 state/models/treasury.py:42
 #: storage/migrations/0067_auto_20230715_1635.py:22
@@ -4105,7 +4095,7 @@ msgstr "Iştirakçılar"
 #: player/templates/player/redesign/view_profile.html:185
 msgctxt "profile"
 msgid "(к рейтингу)"
-msgstr "(Reytinqə)"
+msgstr "(Reytinq)"
 
 #: party/templates/party/redesign/party_view.html:96
 msgctxt "party_view"
@@ -5564,7 +5554,7 @@ msgstr "parametrlər"
 #: player/templates/player/redesign/view_profile.html:99
 msgctxt "profile"
 msgid "рамки"
-msgstr ""
+msgstr "Çərçivələr"
 
 #: player/templates/player/redesign/profile.html:191
 #: player/templates/player/redesign/view_profile.html:110
@@ -5625,7 +5615,7 @@ msgstr "Məhşurluq"
 #: player/templates/player/redesign/view_profile.html:158
 msgctxt "profile"
 msgid "(к статьям)"
-msgstr "(Məqalələrə)"
+msgstr "(Məqalələr)"
 
 #: player/templates/player/redesign/profile.html:361
 #: player/templates/player/redesign/view_profile.html:164
@@ -5637,13 +5627,13 @@ msgstr "Ümumi zərər"
 #: player/templates/player/redesign/view_profile.html:168
 msgctxt "profile"
 msgid "(к войнам)"
-msgstr "(Savaşlara)"
+msgstr "(Savaşlar)"
 
 #: player/templates/player/redesign/profile.html:374
 #: player/templates/player/redesign/view_profile.html:177
 msgctxt "profile"
 msgid "характеристики"
-msgstr ""
+msgstr "Xüsusiyyətlər"
 
 #: player/templates/player/redesign/profile.html:389
 #: player/templates/player/redesign/view_profile.html:192
@@ -6162,7 +6152,7 @@ msgstr ""
 #: player/views/game_event/new_year.py:43
 msgctxt "game_event_ny"
 msgid "С новым годом!"
-msgstr ""
+msgstr "Yeni iliniz mübarək!"
 
 #: player/views/lists/cash_top.py:111
 msgctxt "lists"
@@ -9725,6 +9715,10 @@ msgstr "Döyuşdə iştirak ilə bağlı qeyd yoxdur"
 msgctxt "war_page"
 msgid "Войны"
 msgstr ""
+
+#~ msgctxt "profile"
+#~ msgid "до"
+#~ msgstr "Bitir:"
 
 #~ msgid "Сила"
 #~ msgstr "Güc"
