--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-06 15:30+0300\n"
-"PO-Revision-Date: 2024-11-06 01:21+0300\n"
+"PO-Revision-Date: 2024-11-06 22:26+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -9680,8 +9680,8 @@ msgstr "State wars"
 msgctxt "join_revolution"
 msgid "Поднятие восстания доступно начиная с суммы Характеристик в 15 ед."
 msgstr ""
-"Raising a rebellion is available starting with a Characteristics total of 15 "
-"units"
+"You can start a rebellion starting with sum of Characteristics equal 15 or "
+"greater"
 
 #: war/views/join_revolution.py:30 war/views/join_revolution.py:53
 #: war/views/join_revolution.py:66 war/views/join_revolution.py:78
